tests/baselines/reference/typeInferenceConflictingCandidates.errors.txt
tests/cases/compiler/typeInferenceConflictingCandidates.ts(3,1): error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.


==== tests/cases/compiler/typeInferenceConflictingCandidates.ts (1 errors) ====
    declare function g<T>(a: T, b: T, c: (t: T) => T): T;
    
    g("", 3, a => a);
    ~
!!! error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Try specifying the type arguments explicitly.